# gap-client

./: .gitignore  CHANGELOG  Makefile  README.md  project.qbs  setup.cfg  setup.py
.github/workflows/: cicd.yaml
examples/: hello_gap.py
gap_client/: __init__.py  helpers.py
requirements/: requirements.in  requirements.txt  test_requirements.in  test_requirements.txt
tests/: Makefile  common.py  pytest.ini
tests/data/: SoA.csv
tests/integration/: test_gap.py
