# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata

[bdist_wheel]
universal = 1
python-tag = py37

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude_source_files = true

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

# [options.entry_points]
# console_scripts =
#     foo = my_package.some_module:main_func
#     bar = other_module:some_func
# gui_scripts =
#     baz = my_package_gui:start_func

# [options.packages.find]
# where   = .
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
